--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=test123
 spring.datasource.password=test123
 spring.datasource.url=jdbc:mysql://localhost:3306/library?createDatabaseIfNotExist=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#javax.persistence.schema-generation.scripts.action=drop-and-create
